<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/background_card"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/dayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/periodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_time"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/subjectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/teacherText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:textSize="14sp"
        android:textColor="@color/black" />

</LinearLayout>
