<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.CreateProfileActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingBottom="20dp"
            android:text="@string/create_profile_title"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Global Options -->
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/surname_hint" />

        <!-- Student Section -->
        <LinearLayout
            android:id="@+id/studentSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/student_info_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_hint" />


        </LinearLayout>

        <!-- Parent Section -->
        <LinearLayout
            android:id="@+id/parentSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">


        </LinearLayout>

        <!-- Teacher Section -->
        <LinearLayout
            android:id="@+id/teacherSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/teacher_info_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_hint" />
        </LinearLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#007BFF"
            android:text="@string/next_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
