<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    tools:context=".ui.activity.CreateAccountActivity">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="360dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        tools:ignore="ObsoleteLayoutParam,TouchTargetSizeCheck"
        tools:srcCompat="@drawable/backbutton" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/create_account_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Username Input -->
    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/username_label"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLabel"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameInputLayout"
        android:layout_marginBottom="5dp"
        android:text="@string/email_label"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLabel"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInputLayout"
        android:layout_marginBottom="5dp"
        android:text="@string/password_label"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_marginBottom="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#007BFF"
        android:padding="15dp"
        android:text="@string/next_button_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</RelativeLayout>
